:lipstick: Fix sizing of places in the index page

--- a/app/assets/stylesheets/layout/home-page-item.scss
+++ b/app/assets/stylesheets/layout/home-page-item.scss
@@ -2,4 +2,10 @@
   display: flex;
   justify-content: center;
   margin-bottom: 8rem;
+
+  @media only screen and (min-width: 768px) {
+    > .card {
+      width: 50%;
+    }
+  }
 }
