Caption on place images (#46) [Finishes #167826359]
* :wrench: Add controller and action info as dataset in body element

* :lipstick: Add CSS classes to facilitate dynamic function of adding description to images

* :white_check_mark: Write Cucumber specs for adding image caption

* :lipstick: Fix sizing of places in the index page

* :wrench: Remove dynamic page for adding save and cancel buttons

* :sparkles: Implement editing a photo for a place

:wrench: Add policy not to edit photos if not owned by the user

* :white_check_mark: Update pending Cucumber specs to use new step definitions

* :lipstick: Fix UI design and layout of place and images pages

--- a/app/views/places/show.haml
+++ b/app/views/places/show.haml
@@ -38,13 +38,14 @@
   .column
     .title.is-5.has-text-primary More Images
     - if @place.photos.any?
-      .subtitle.is-7.has-text-info click images to view
+      .subtitle.is-7.has-text-info click images to view comments & descriptions
       .columns.is-multiline.is-vcentered
         - @place.photos.each do |photo|
           .column.is-one-third
             .box
               %figure.image.is-clickable
-                = image_tag photo.photo.variant(resize: '200x200'), class: 'place-image', data: { image: url_for(photo.photo) }
+                = link_to image_path(photo) do
+                  = image_tag photo.photo.variant(resize: '200x200')
     - else
       .container
         %article.message.is-link
