--- a/app/views/places/show.haml
+++ b/app/views/places/show.haml
@@ -23,7 +23,7 @@
         %figure.image.is-clickable
           = image_tag place_main_photo(@place.main_photo),
             class: 'place-image',
-            data: { image: url_for(place_main_photo(@place.main_photo)) }
+            data: { image: url_for(place_main_photo_natural(@place.main_photo)) }
       .card-content
         %h1.title.has-text-grey-light #{@place.name}
         %h2.subtitle #{@place.address}
