--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -9,3 +9,7 @@
         %small= time_ago_in_words Time.now
         %br/
         = comment.content
+    - if authorized_to?(:destroy?, comment)
+      %nav.level.is-mobile
+        .level-left
+          = link_to 'Delete', comment, class: 'level-item help is-marginless', method: :delete, data: { confirm: 'Delete comment?' }
