--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -9,10 +9,12 @@ html
                           media: 'all',
                           'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    script src: 'https://kit.fontawesome.com/f89a405bc5.js'
-  body.has-navbar-fixed-top data-controller=controller_path data-action=action_name
+    script src='https://kit.fontawesome.com/f89a405bc5.js'
+  body.has-navbar-fixed-top[data-controller=controller_path
+                            data-action=action_name]
     - flash.each do |message_type, message|
-      = content_tag :div, class: "notification is-#{message_type} has-text-centered \
+      = content_tag :div, class: "notification is-#{message_type} \
+                                  has-text-centered \
                                   adjust-margin-for-fixed-navbar" do
         = message
     = render 'layouts/navbar'
