💄 Fix icon for editing a place

--- a/app/views/places/_place.slim
+++ b/app/views/places/_place.slim
@@ -11,7 +11,8 @@ article.home-page-item
                   class: 'card-header-icon edit-place-link',
                   'aria-label': 'more-options' do
           span.icon
-            i.fas.fa-edit aria-hidden=true EDIT
+            i.fas.fa-edit aria-hidden=true
+          | EDIT
     .card-image
       = link_to place do
         figure.image
