--- a/app/views/places/show.slim
+++ b/app/views/places/show.slim
@@ -21,7 +21,7 @@
                     'aria-label': 'more-options' do
             span.icon
               i.fas.fa-edit aria-hidden=true
-            EDIT
+            | EDIT
       .card-image
         figure.image.is-clickable
           = image_tag place_main_photo(@place.main_photo),
