--- a/app/views/images/show.slim
+++ b/app/views/images/show.slim
@@ -6,7 +6,7 @@ section.section
           = link_to place_path(@image.place) do
             span.icon
               i.fas.fa-arrow-circle-left
-            Back to place
+            |  Back to place
         - if image_authorized_to(:edit?, @image)
           = link_to edit_image_path, class: 'card-header-icon',
             'aria-label': 'more-options' do
@@ -15,7 +15,7 @@ section.section
                 i.fas.fa-pen-square aria-hidden=true
               - else
                 i.fas.fa-plus aria-hidden=true
-            description
+            |  description
 
       .card-image
         figure.image.is-16by9
