🎽🔀 Switch to slim (#75)
* ➕ Add slim-rails and haml2slim [#167826366]

* 💄 Convert home page to slim [#176407227]

* 💄 Convert application.haml to slim [#176407227]

* 💄 Convert _navbar.haml to slim [#176407227]

* 💄 Convert users/_show.haml to slim

* 💄 Convert users/edit.haml to slim

* 💄 Convert users/places.haml to slim

* 💄 Convert places/new.haml to Slim

* 💄 Convert places/show.haml to Slim

* 💄 Convert places/_place_image_modal.haml to Slim

* 💄 Convert images/show.haml to Slim

* 💄 Fix icon for editing a place

* 💄 Fix text on links

* 💄 Convert images/edit.haml to Slim

* 💄 Convert clearance view to Slim

* ➖ Remove haml2slim

* 🔧 Enable test parallelism in Circle CI

--- a/app/views/places/_place_image_modal.slim
+++ b/app/views/places/_place_image_modal.slim
@@ -2,6 +2,6 @@
   .modal-background
   .modal-content
     = link_to nil, target: '_blank' do
-      %figure.image
+      figure.image
         = image_tag ''
-  %button.modal-close.is-large{ 'aria-label': 'close' }
+  button.modal-close.is-large aria-label='close'
