--- a/app/views/images/show.slim
+++ b/app/views/images/show.slim
@@ -29,3 +29,25 @@ section.section
                     edit_image_path,
                     class: 'card-footer-item edit-photo-link'
 
+- unless @comments.blank?
+  section.section
+    .container
+      = render @comments
+
+section.section
+  .container
+    article.media
+      figure.media-left.is-size-2
+        span.icon.is-large.has-text-success
+          i.fas.fa-comments
+      .media-content
+        = form_with model: [@image, Comment.new],
+                    url: image_comments_path(@image) do |form|
+          .field
+            .control
+              = form.text_area :content,
+                               class: :textarea,
+                               placeholder: 'Add a comment...'
+          .field
+            .control
+              = form.submit 'Post comment', class: 'button is-primary'
