--- a/app/views/places/show.slim
+++ b/app/views/places/show.slim
@@ -7,7 +7,7 @@
           = link_to root_path do
             span.icon
               i.fas.fa-arrow-circle-left
-        - if authorized_to(:destroy?, @place)
+        - if authorized_to?(:destroy?, @place)
           = link_to @place,
                     class: 'card-header-icon is-paddingless trash-can-link',
                     'aria-label': 'more-options',
@@ -15,7 +15,7 @@
                     data: { confirm: "Are you sure you want to delete #{@place.name}?" } do
             span.icon
               i.fas.fa-trash aria-hidden=true
-        - if authorized_to(:edit?, @place)
+        - if authorized_to?(:edit?, @place)
           = link_to edit_place_path(@place), 
                     class: 'card-header-icon edit-place-link',
                     'aria-label': 'more-options' do
