--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -1,6 +1,6 @@
 article.media
   figure.media-left
-    p.image
+    p.image.is-64x64
       = image_tag user_thumbnail(comment.user_avatar)
   .media-content
     .content
