--- a/app/views/images/show.slim
+++ b/app/views/images/show.slim
@@ -18,7 +18,7 @@ section.section
             | description
 
       .card-image
-        figure.image.is-16by9
+        figure.image
           = image_tag @image.photo
       .card-content
         .content
