--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -1,7 +1,7 @@
 nav.navbar.is-spaced.is-fixed-top role='navigation' aria-label='main navigation'
   .navbar-brand
     a.navbar-item href='/'
-      = image_tag 'gikan'
+      h4.title.is-4 Moniquer
     a.navbar-burger.burger[role='button'
                            aria-label='menu'
                            aria-expanded='false'
