💄 Swap Delete and Edit links on comments

--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -13,12 +13,12 @@ article.media
     - if authorized_to_perform_operations_on? comment
       nav.level.is-mobile
         .level-left
+          = link_to 'Edit',
+                    edit_comment_path(comment),
+                    class: 'level-item help is-marginless mr-1'
           = link_to 'Delete',
                     comment,
-                    class: 'level-item help is-marginless mr-1',
+                    class: 'level-item help is-marginless',
                     method: :delete,
                     data: { confirm: 'Delete comment?' }
 
-          = link_to 'Edit',
-                    edit_comment_path(comment),
-                    class: 'level-item help is-marginless'
