💄 Adjust comment icon

--- a/app/views/images/show.slim
+++ b/app/views/images/show.slim
@@ -39,7 +39,7 @@ section.section
     .container
       article.media
         figure.media-left.is-size-2
-          span.icon.is-large.has-text-success
+          span.icon.is-small.has-text-success.mr-3
             i.fas.fa-comments
         .media-content
           = form_with model: [@image, Comment.new],
