--- a/app/views/images/show.slim
+++ b/app/views/images/show.slim
@@ -3,7 +3,7 @@ section.section
     .card
       header.card-header
         span.card-header-title
-          = link_to place_path(@image.place) do
+          = link_to place_path(@image.imageable) do
             span.icon
               i.fas.fa-arrow-circle-left
             |  Back to place
@@ -19,7 +19,7 @@ section.section
 
       .card-image
         figure.image
-          = image_tag @image.photo
+          = image_tag @image.image
       .card-content
         .content
           p.has-text-centered= @image.caption
