--- a/app/views/places/_place.slim
+++ b/app/views/places/_place.slim
@@ -16,7 +16,7 @@ article.home-page-item
     .card-image
       = link_to place do
         figure.image
-          = image_tag place_main_photo(place.main_photo)
+          = image_tag profile_picture(place.profile_picture)
     .card-content
       h1.title.has-text-grey-light = place.name
       h2.subtitle = place.address
