--- a/app/views/reviews/new.slim
+++ b/app/views/reviews/new.slim
@@ -11,9 +11,9 @@
                     i.fas.fa-arrow-circle-left
             .card-image
               figure.image.is-clickable
-                = image_tag place_main_photo(@place.main_photo),
+                = image_tag profile_picture(@place.profile_picture),
                             class: 'place-image',
-                            data: { image: url_for(place_main_photo_natural(@place.main_photo)) }
+                            data: { image: url_for(profile_picture_original_size(@place.profile_picture)) }
             .card-content
               h1.title.has-text-grey-light #{@place.name}
               h2.subtitle #{@place.address}
