🏗 Fix place pictures related code

--- a/app/views/places/new.slim
+++ b/app/views/places/new.slim
@@ -86,13 +86,13 @@ section.section
 
       .field.is-horizontal
         .field-label.is-medium
-          = form.label :photos, 'Upload more images', class: 'label'
+          = form.label :pictures, 'Upload more images', class: 'label'
         .field-body
           .field
             .control
               .file.is-warning.is-boxed
                 label.file-label
-                  = form.file_field :photos, class: 'file-input', multiple: true
+                  = form.file_field :pictures, class: 'file-input', multiple: true
                   span.file-cta
                     span.file-icon
                       i.fas.fa-cloud-upload-alt
