--- a/app/views/places/show.slim
+++ b/app/views/places/show.slim
@@ -49,7 +49,7 @@
     - if @place.pictures.any?
       .subtitle.is-7.has-text-info click images to view comments & descriptions
       .columns.is-multiline.is-vcentered
-        - @place.picutres.each do |picture|
+        - @place.pictures.each do |picture|
           .column.is-one-third
             .box
               figure.image.is-clickable
