--- a/app/views/images/edit.slim
+++ b/app/views/images/edit.slim
@@ -1,13 +1,13 @@
 header.section.is-paddingless.edit-image-box
   .container
-    = link_to place_path(@image.place) do
+    = link_to place_path(@image.imageable) do
       span.icon
         i.fas.fa-arrow-circle-left
       |  Back to place
 
 section.section
   .container
-    = image_tag @image.photo, class: 'box edit-image-box'
+    = image_tag @image.image, class: 'box edit-image-box'
 
 section.section.is-paddingless
   .container
