🚸 Scroll to field when adding image description

--- a/app/views/images/edit.slim
+++ b/app/views/images/edit.slim
@@ -18,7 +18,7 @@ section.section.is-paddingless
       .field
         = form.label :'add description', class: :label
         .control
-          = form.text_field :caption, class: :input
+          = form.text_field :caption, class: :input, id: 'image-caption-edit-field'
 
       .field.is-grouped.is-grouped-centered
         .control
