--- a/app/views/places/new.slim
+++ b/app/views/places/new.slim
@@ -2,21 +2,21 @@ h1.title.is-marginless.has-text-primary Submit a place
 section.section
   .container
     = form_with model: [@user, @place], id: :new_place, local: true do |form|
-      = form.fields_for :main_photo, @main_photo do |main_photo_form|
+      = form.fields_for :profile_picture, @profile_picture do |profile_picture_form|
         .field.is-horizontal
           .field-label.is-large
-            = main_photo_form.label :main_photo, class: 'label'
+            = profile_picture_form.label :profile_picture, class: 'label'
           .field-body
             .file.is-info.is-boxed
               label.file-label
-                = main_photo_form.file_field :image, class: 'file-input'
+                = profile_picture_form.file_field :image, class: 'file-input'
                 span.file-cta
                   span.file-icon
                     i.fas.fa-cloud-upload-alt
                   span.file-label Upload main photo
-                = has_main_photo?(@place) do
+                = profile_picture?(@place) do
                   span.file-name.is-centered
-                    = @place.main_photo.image.filename
+                    = @place.profile_picture.image.filename
 
       .field.is-horizontal
         .field-label.is-normal
@@ -86,13 +86,13 @@ section.section
 
       .field.is-horizontal
         .field-label.is-medium
-          = form.label :photos, 'Upload more images', class: 'label'
+          = form.label :pictures, 'Upload more images', class: 'label'
         .field-body
           .field
             .control
               .file.is-warning.is-boxed
                 label.file-label
-                  = form.file_field :photos, class: 'file-input', multiple: true
+                  = form.file_field :pictures, class: 'file-input', multiple: true
                   span.file-cta
                     span.file-icon
                       i.fas.fa-cloud-upload-alt
