--- a/app/views/places/show.slim
+++ b/app/views/places/show.slim
@@ -40,6 +40,9 @@
           .title.is-6 Mobile:&nbsp#{link_to @place.mobile, "tel:#{@place.mobile}"}
           .title.is-6 Landline:&nbsp#{link_to @place.landline, "tel:#{@place.landline}"}
           .title.is-6 Email:&nbsp#{mail_to @place.email}
+          .title.is-6 data-testid=:website Website:&nbsp#{link_to @place.website, @presenter.website_link}
+          .title.is-6 data-testid=:facebook Facebook:&nbsp#{link_to @place.facebook, @presenter.facebook_link}
+          .title.is-6 data-testid=:instagram Instagram:&nbsp#{@place.instagram}
     .card.mt-5
       .card-content
         .content = simple_format @place.description
@@ -70,4 +73,4 @@ section.section
 
   section.section
     .container
-      = render @place.reviews, place_view: @place_view
+      = render @place.reviews, presenter: @presenter
