--- a/app/views/reviews/_review.slim
+++ b/app/views/reviews/_review.slim
@@ -2,7 +2,7 @@ article.mt-4
   article.card
     header.card-header.is-flex.is-align-items-center
       figure.image.pl-3
-        = image_tag place_view.reviewer_thumbnail(review.reviewer_avatar),
+        = image_tag presenter.reviewer_thumbnail(review.reviewer_avatar),
           class: 'is-rounded'
       p.card-header-title.has-text-primary.is-unselectable #{review.reviewer_name}
     .card-content
