--- a/app/views/images/show.slim
+++ b/app/views/images/show.slim
@@ -7,6 +7,14 @@ section.section
             span.icon
               i.fas.fa-arrow-circle-left
             |  Back to place
+        - if image_authorized_to(:destroy?, @image)
+          = link_to image_path,
+                    class: 'card-header-icon is-paddingless trash-can-link',
+                    'aria-label': 'more-options',
+                    method: :delete,
+                    data: { confirm: "Are you sure you want to delete #{@image.image.filename}?" } do
+            span.icon
+              i.fas.fa-trash aria-hidden=true
         - if image_authorized_to(:edit?, @image)
           = link_to edit_image_path(anchor: 'image-caption-edit-field'),
               class: 'card-header-icon', 'aria-label': 'more-options' do
