--- a/app/views/places/new.slim
+++ b/app/views/places/new.slim
@@ -125,4 +125,4 @@ section.section
             .control
               = form.submit :Submit, class: 'button is-primary'
             .control
-              = link_to 'Go Back to Home', root_path, class: 'button is-info'
+              = link_to 'Back', 'javascript:window.history.back()', class: 'button is-info'
