--- a/app/views/places/_profile_details.slim
+++ b/app/views/places/_profile_details.slim
@@ -3,4 +3,6 @@
   p.title.is-6 Email:&nbsp#{mail_to place.email}
   p.title.is-6 data-testid=:website Website:&nbsp#{link_to place.website, presenter.website_link}
   p.title.is-6 data-testid=:facebook Facebook:&nbsp#{link_to place.facebook, presenter.facebook_link}
-  p.title.is-6 data-testid=:instagram Instagram:&nbsp#{place.instagram}
+  p.title.is-6 data-testid=:instagram
+    | Instagram:&nbsp
+    span.has-text-primary #{place.instagram}
