--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -7,3 +7,10 @@
   margin: auto;
   width: 50%;
 }
+
+@media only screen and (min-width: 768px) {
+  .image-show {
+    margin: auto;
+    width: 30vw;
+  }
+}
